--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,36 +15,15 @@
   <article class="tabs">
 
   	<section id="tab1">
-  		<h2>
-        <a href="#tab1">
-          <sub><i class="fa fa-map-marker fa-2x"></i></sub>
-          <span class="tab-name">By Location</span>
-        </a>
-      </h2>
-  		<p>This content appears on tab 1.</p>
-  		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum lacinia elit nec mi ornare et viverra massa pharetra. Phasellus mollis, massa sed suscipit pharetra, nunc tellus sagittis nunc, et tempus dui lorem a ipsum.</p>
+  		<%= partial "tab1" %>
   	</section>
 	
   	<section id="tab2">
-  		<h2>
-        <a href="#tab2">
-          <sub><i class="fa fa-truck fa-2x"></i></sub>
-          <span class="tab-name">By Truck</span>
-        </a>
-      </h2>
-  		<p>This content appears on tab 2.</p>
-  		<p>Fusce ullamcorper orci vel turpis vestibulum eu congue nisl euismod. Maecenas euismod, orci non tempus fermentum, leo metus lacinia lacus, nec ultrices quam ligula ac leo. Quisque tortor neque, vulputate quis ultricies ut, rhoncus mollis metus.</p>
+  		<%= partial "tab2" %>
   	</section>
 	
   	<section id="tab3">
-  		<h2>
-        <a href="#tab3">
-          <sub><i class="fa fa-compass fa-2x"></i></sub>
-          <span class="tab-name">Map</span>
-        </a>
-      </h2>
-  		<p>This content appears on tab 3.</p>
-  		<p>Sed et diam eu ipsum scelerisque laoreet quis in nibh. Proin sodales augue lectus. Maecenas a lorem a mi congue pharetra. Sed sed risus in nisi venenatis condimentum. Donec ac consectetur arcu. Integer urna neque, rutrum at pretium eu.</p>
+  		<%= partial "tab3" %>
   	</section>
 
   </article>
