--- a/source/stylesheets/_main.scss
+++ b/source/stylesheets/_main.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: #efefef;
+  background-color: #fff;
   .heading-block {
     text-align: center;
     margin-top: 20px;
@@ -16,6 +16,7 @@ body {
     }
     span {
       font-size: 36px;
+      color: red;
     }
   }
   
@@ -31,8 +32,8 @@ body {
   
   .ad-block {
     padding: 5px 0;
-    border-top: 1px solid grey;
-    border-bottom: 1px solid grey;
+    border-top: 1px solid red;
+    border-bottom: 1px solid red;
     .small-ad {
       display: block;
       width: 100%;
@@ -64,7 +65,7 @@ body {
       }
       section:target, section:target h2 {
       	color: #333;
-      	background-color: #fff;
+      	background-color: lighten(#ddd, 10%);
       	z-index: 2;
       }
       section {
