first architecture of the modules to show locations.  Responsive grid with 1, 2, 3, and 4 up designs at breakpoints

--- a/source/partials/_tab1.html.erb
+++ b/source/partials/_tab1.html.erb
@@ -1,8 +1,161 @@
-<h2>
+<h2> <!-- This is the content of the tab -->
   <a href="#tab1">
     <sub><i class="fa fa-map-marker fa-2x"></i></sub>
     <span class="tab-name">By Location</span>
   </a>
 </h2>
-<p>This content appears on tab 1.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum lacinia elit nec mi ornare et viverra massa pharetra. Phasellus mollis, massa sed suscipit pharetra, nunc tellus sagittis nunc, et tempus dui lorem a ipsum.</p>
+<!-- This is the content of the window -->
+<div class="module-container">
+  <div class="module-location">
+    <div class="location-name">Franklin Square</div>
+    <div class="truck">
+      <span class="name">Truck Name</span>
+      <div class="truck-details">
+        <p class="description"></p>
+        <% link_to "Website", "http://www.theirwebsite.com", :class => "website" %>
+      </div>
+    </div>
+    <div class="truck">
+      <span class="name">Truck Name</span>
+      <div class="truck-details">
+        <p class="description"></p>
+        <% link_to "Website", "http://www.theirwebsite.com", :class => "website" %>
+      </div>
+    </div>
+    <div class="truck">
+      <span class="name">Truck Name</span>
+      <div class="truck-details">
+        <p class="description"></p>
+        <% link_to "Website", "http://www.theirwebsite.com", :class => "website" %>
+      </div>
+    </div>
+    <div class="truck">
+      <span class="name">Truck Name</span>
+      <div class="truck-details">
+        <p class="description"></p>
+        <% link_to "Website", "http://www.theirwebsite.com", :class => "website" %>
+      </div>
+    </div>
+    <div class="truck">
+      <span class="name">Truck Name</span>
+      <div class="truck-details">
+        <p class="description"></p>
+        <% link_to "Website", "http://www.theirwebsite.com", :class => "website" %>
+      </div>
+    </div>
+  </div>
+  <div class="module-location">
+    <div class="location-name">McPherson Square</div>
+    <div class="truck">
+      <span class="name">Truck Name</span>
+      <div class="truck-details">
+        <p class="description"></p>
+        <% link_to "Website", "http://www.theirwebsite.com", :class => "website" %>
+      </div>
+    </div>
+    <div class="truck">
+      <span class="name">Truck Name</span>
+      <div class="truck-details">
+        <p class="description"></p>
+        <% link_to "Website", "http://www.theirwebsite.com", :class => "website" %>
+      </div>
+    </div>
+    <div class="truck">
+      <span class="name">Truck Name</span>
+      <div class="truck-details">
+        <p class="description"></p>
+        <% link_to "Website", "http://www.theirwebsite.com", :class => "website" %>
+      </div>
+    </div>
+    <div class="truck">
+      <span class="name">Truck Name</span>
+      <div class="truck-details">
+        <p class="description"></p>
+        <% link_to "Website", "http://www.theirwebsite.com", :class => "website" %>
+      </div>
+    </div>
+    <div class="truck">
+      <span class="name">Truck Name</span>
+      <div class="truck-details">
+        <p class="description"></p>
+        <% link_to "Website", "http://www.theirwebsite.com", :class => "website" %>
+      </div>
+    </div>
+  </div>
+  <div class="module-location">
+    <div class="location-name">Farragut Square</div>
+    <div class="truck">
+      <span class="name">Truck Name</span>
+      <div class="truck-details">
+        <p class="description"></p>
+        <% link_to "Website", "http://www.theirwebsite.com", :class => "website" %>
+      </div>
+    </div>
+    <div class="truck">
+      <span class="name">Truck Name</span>
+      <div class="truck-details">
+        <p class="description"></p>
+        <% link_to "Website", "http://www.theirwebsite.com", :class => "website" %>
+      </div>
+    </div>
+    <div class="truck">
+      <span class="name">Truck Name</span>
+      <div class="truck-details">
+        <p class="description"></p>
+        <% link_to "Website", "http://www.theirwebsite.com", :class => "website" %>
+      </div>
+    </div>
+    <div class="truck">
+      <span class="name">Truck Name</span>
+      <div class="truck-details">
+        <p class="description"></p>
+        <% link_to "Website", "http://www.theirwebsite.com", :class => "website" %>
+      </div>
+    </div>
+    <div class="truck">
+      <span class="name">Truck Name</span>
+      <div class="truck-details">
+        <p class="description"></p>
+        <% link_to "Website", "http://www.theirwebsite.com", :class => "website" %>
+      </div>
+    </div>
+  </div>
+  <div class="module-location">
+    <div class="location-name">Navy Yard/Nationals Park/DOT</div>
+    <div class="truck">
+      <span class="name">Truck Name</span>
+      <div class="truck-details">
+        <p class="description"></p>
+        <% link_to "Website", "http://www.theirwebsite.com", :class => "website" %>
+      </div>
+    </div>
+    <div class="truck">
+      <span class="name">Truck Name</span>
+      <div class="truck-details">
+        <p class="description"></p>
+        <% link_to "Website", "http://www.theirwebsite.com", :class => "website" %>
+      </div>
+    </div>
+    <div class="truck">
+      <span class="name">Truck Name</span>
+      <div class="truck-details">
+        <p class="description"></p>
+        <% link_to "Website", "http://www.theirwebsite.com", :class => "website" %>
+      </div>
+    </div>
+    <div class="truck">
+      <span class="name">Truck Name</span>
+      <div class="truck-details">
+        <p class="description"></p>
+        <% link_to "Website", "http://www.theirwebsite.com", :class => "website" %>
+      </div>
+    </div>
+    <div class="truck">
+      <span class="name">Truck Name</span>
+      <div class="truck-details">
+        <p class="description"></p>
+        <% link_to "Website", "http://www.theirwebsite.com", :class => "website" %>
+      </div>
+    </div>
+  </div>
+</div>
