--- a/source/stylesheets/_xl.scss
+++ b/source/stylesheets/_xl.scss
@@ -11,5 +11,20 @@
         margin: 0 10px -10px 10px;
       }
     }
+    .container {
+      article.tabs {
+        section {
+          &#tab1 {
+            .module-container {
+              .module-location {
+                width: 23.1%;
+                .location-name {
+                }
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
