--- a/source/stylesheets/_desktop.scss
+++ b/source/stylesheets/_desktop.scss
@@ -18,5 +18,33 @@
         }
       }
     }
+    .container {
+      article.tabs {
+        section {
+          border-radius: 5px;
+          box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+          h2 {
+            a {
+              span.tab-name {
+                display: inline-block;
+                height: 100%;
+                margin-left: 2px;
+              }
+            }
+          }
+          &#tab1 {
+            .module-container {
+              .module-location {
+                width: 31.25%;
+                margin-right: 1%;
+                margin-left: 1%;
+                .location-name {
+                }
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
