--- a/source/stylesheets/_tablet.scss
+++ b/source/stylesheets/_tablet.scss
@@ -3,6 +3,8 @@
     width: 90%;
     margin: 0 auto;
     .heading-block {
+      margin-top: 20px;
+      margin-bottom: 20px;
       height: auto;
     }
     .ad-block {
@@ -30,6 +32,17 @@
                 display: inline-block;
                 height: 100%;
                 margin-left: 2px;
+              }
+            }
+          }
+          &#tab1 {
+            .module-container {
+              .module-location {
+                width: 48%;
+                margin-right: 1%;
+                margin-left: 1%;
+                .location-name {
+                }
               }
             }
           }
