--- a/source/stylesheets/_main.scss
+++ b/source/stylesheets/_main.scss
@@ -24,6 +24,11 @@ body {
     text-align: center;
     color: darken(#efefef, 20%);
     font-size: 0.8em;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 5px;
     a {
       text-decoration: none;
       color: inherit;
@@ -32,8 +37,6 @@ body {
   
   .ad-block {
     padding: 5px 0;
-    border-top: 1px solid red;
-    border-bottom: 1px solid red;
     .small-ad {
       display: block;
       width: 100%;
