--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,7 +12,27 @@
   </div>
 </div>
 <div class="container">
-  
+  <div class="view truck-view"></div>
+  <div class="view loc-view">
+    <div class="loc" id="loc-1" style="background-image:url(/images/mcpherson_wrap_to_retina_desktop.jpg);background-position: 0px -300px;">
+      <span class="loc-name" >McPherson Square</span>
+    </div>
+    <div class="loc" id="loc-2" style="background-image:url(/images/franklin_wrap_to_retina_desktop.jpg);background-position: 0px -320px;">
+      <span class="loc-name">Franklin Square</span>
+    </div>
+    <div class="loc" id="loc-3" style="background-image:url(/images/farragut_wrap_to_retina_desktop.jpg);background-position: 0px -300px;">
+      <span class="loc-name">Farragut Square</span>
+    </div>
+    <div class="loc" id="loc-4" style="background-image:url(/images/freedom_full.jpg);background-position: 0px -300px;">
+      <span class="loc-name">Freedom Plaza</span>
+    </div>
+    <div class="loc" id="loc-5" style="background-image:url(/images/lenfant_full.jpg);background-position: 0px -80px;">
+      <span class="loc-name">L'Enfant Plaza</span>
+    </div>
+    <div class="loc" id="loc-6" style="background-image:url(/images/mount_vernon_full.jpg);background-position: 0px 0px;">
+      <span class="loc-name">Mount Vernon Square</span>
+    </div>
+  </div>
 </div>
 <div class="footer">
   Made with hunger by <a href="http://twitter.com/noannualfee" target="_blank" >Joshua Diamond</a> and <a href="http://twitter.com/adamklevy" target="_blank" >Adam Levy</a>
