--- a/source/stylesheets/_main.scss
+++ b/source/stylesheets/_main.scss
@@ -2,9 +2,9 @@ body {
   background-color: #fff;
   .heading-block {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-bottom: 10px;
-    height: 50px;
+    height: 40px;
     img {
       width: 40px;
       height: 40px;
@@ -23,10 +23,7 @@ body {
   .footer {
     text-align: center;
     color: darken(#efefef, 20%);
-    font-size: 0.8em;
-    position: absolute;
-    bottom: 0;
-    left: 0;
+    font-size: 0.7em;
     width: 100%;
     padding: 5px;
     a {
@@ -53,5 +50,27 @@ body {
   }
 
   .container {
+    .view {
+      width: 100%;
+    }
+    .truck-view {
+      display: none;
+    }
+    .loc-view {
+      display: block;
+      .loc {
+        height: 80px;
+        background-color: blue;
+        margin-bottom: 2px;
+        background-size: 100%;
+        span.loc-name {
+          text-align: center;
+          width: 100%;
+          display: block;
+          padding-top: 24.5px;
+          text-shadow: white 0px 0px 10px;
+        }
+      }
+    }
   }
 }
